module export fix